# gnn-modelzoo-fork

./: .gitignore  PYTHON-SETUP.md  hw_snapshot.sh  pyproject.toml  req.txt  run_modelzoo.sh  run_prepare_ogbn_papers100M.pbs  run_pyg.sh  run_pyg_nqsv.pbs  setup.sh
agent/: AGENTS.md  mlir_investigation_report.md  report.md
analyze/: ExecPlan.md  README.md  __init__.py  kernel_edge_visualizer.py  kernel_visualizer.py  sample_wse_log.py  visualize_logs.py  wio_visualizer.py  wse_log_viz.py  wse_visualizer.py
analyze/WIO/: wio_log_parser.py  wio_log_visualizer.py  wio_log_visualizer_cli.py  wio_summary_visualizer.py
analyze/WIO/raw_report/: wio_report_1.txt  wio_report_3.txt
analyze/raw_report/: wio_report_2.txt
analyze/tests/: test_cerebras_log_parser.py  test_wio_log_parser.py  test_wio_log_visualizer_cli.py  test_wio_summary_visualizer.py  test_wio_visualizer.py  test_wse_log_viz_cli.py
data/gnn/: datasets
hwinfo/: meta_bnode082_20260128_192046.txt  summary_bnode082_20260128_192046.txt
scripts/: verify_sdk_benchmark_correctness.py
src/cerebras/modelzoo/cli/: main.py
src/cerebras/modelzoo/config/: types.py
src/cerebras/modelzoo/data_preparation/data_preprocessing/: utils.py
src/cerebras/modelzoo/models/gnn/: data.py  graphsage_pyg.py  model.py  partition.py  worker_validation.py
src/cerebras/modelzoo/models/sdk-benchmark/: README.md  __init__.py
src/cerebras/modelzoo/registry/: registry.yaml
src/cerebras/modelzoo/trainer/: utils.py  validate.py
src/cerebras/modelzoo/trainer/callbacks/: profiler.py
(+191 files in other folders)
