[project]
name = "gnn-modelzoo-v2-6"
requires-python = "==3.11.*"
dependencies = [
    "bigcode-eval",
    "cerebras-pytorch==2.6.0",
    "jsonschema>=4.25.1",
    "lm-eval",
    "numpy<2.0",
    "ogb>=1.3.6",
    "peft==0.17.1",
    "pydantic>=2.12.5",
    "pyg-lib>=0.4.0",
    "slack-sdk>=3.39.0",
    "torch-geometric>=2.7.0",
]
dynamic = ["readme", "authors", "classifiers", "scripts", "version", "description"]

[tool.uv.sources]
bigcode-eval = { url = "https://github.com/bigcode-project/bigcode-evaluation-harness/archive/f0b81a9d079289881bd42f509811d42fe73e58cf.zip" }
lm-eval = { url = "https://github.com/EleutherAI/lm-evaluation-harness/archive/refs/tags/v0.4.7.zip" }
