[project]
name = "gnn-modelzoo-v2-6"
requires-python = "==3.11.*"
dependencies = [
    "argcomplete>=3.6.3",
    "cerebras-pytorch==2.6.0",
    "jsonschema>=4.25.1",
    "numpy<2.0",
    "ogb>=1.3.6",
    "peft==0.17.1",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "slack-sdk>=3.39.0",
    "torch-geometric>=2.7.0",
]
dynamic = ["readme", "authors", "classifiers", "scripts", "version", "description"]
