[build-system]
requires = ["setuptools>=65", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebras_modelzoo"
requires-python = "==3.11.*"
dynamic = [
    "authors",
    "classifiers",
    "dependencies",
    "description",
    "readme",
    "scripts",
    "version",
]

[tool.uv]
package = true
